fixed alignment in cols and improved hover color of branding

--- a/stylesheets/recipe_style.css
+++ b/stylesheets/recipe_style.css
@@ -49,8 +49,9 @@
     position: relative;
     height: 100%;
     overflow:hidden;
-    padding-left: 30px;
+    padding-left: 40px;
     padding-right:20px;
+    padding-top: 10px;
 }
 
 .recipe #main-wrapper {
